# api/internal/handler/handler.go
@@ -14,6 +14,26 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
+// API doc of Manager API.
+//
+// It's used to manage etcd and provide APIs to the frontend interface.
+//
+// Terms Of Service:
+//     Schemes: http, https
+//     Host: 127.0.0.1
+//     BasePath: /v2
+//     Version: 2.2
+//     License: Apache License 2.0 http://www.apache.org/licenses/LICENSE-2.0
+//
+//     Consumes:
+//     - application/json
+//     - application/xml
+//
+//     Produces:
+//     - application/json
+//     - application/xml
+//
+// swagger:meta
 package handler
 
 import (
